yaml for istio and k8/yaml of emoji-grpc-practice 02 (better than 01 but uncorrect)/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: grpc
      protocol: GRPC
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  -  gateway.istio-system.svc.cluster.local 
  http:
  - route:
    - destination:
        host: backend-service
        port:
          number: 8000
